[gd_scene load_steps=6 format=2]

[ext_resource path="res://res/fonts/Freaky Witches.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://screens/kirmesinfo/Kirmesburschen.gd" type="Script" id=2]
[ext_resource path="res://res/themes/theme.tres" type="Theme" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 15
font_data = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="PopupDialog" type="PopupDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -144.0
margin_top = -94.0
margin_right = 151.0
margin_bottom = 32.0
theme = ExtResource( 3 )

[node name="Label" type="Label" parent="PopupDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -66.0
margin_top = -24.0
margin_right = 66.0
margin_bottom = 24.0
text = "Lade..."
align = 1
valign = 1

[node name="BurschenScrollContainer" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 13.0
margin_top = 17.0
margin_right = -19.0
margin_bottom = -73.0

[node name="BurschenVBoxContainer" type="VBoxContainer" parent="BurschenScrollContainer"]
margin_right = 328.0
margin_bottom = 550.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Menue" type="Button" parent="."]
margin_left = 1.0
margin_top = 599.0
margin_right = 361.0
margin_bottom = 635.0
size_flags_horizontal = 3
theme = ExtResource( 3 )
text = "Hauptmen√º"

[node name="AcceptDialog" type="AcceptDialog" parent="."]
visible = true
margin_left = 20.0
margin_top = 51.0
margin_right = 348.0
margin_bottom = 569.0
rect_pivot_offset = Vector2( -144, 253 )
theme = ExtResource( 3 )
window_title = "Warnung!"

[node name="VBoxContainer" type="VBoxContainer" parent="AcceptDialog"]
margin_left = 10.0
margin_top = 16.0
margin_right = 313.0
margin_bottom = 471.0

[node name="nickname" type="Label" parent="AcceptDialog/VBoxContainer"]
margin_right = 303.0
margin_bottom = 22.0
text = "Nickname"
align = 1
autowrap = true

[node name="name" type="Label" parent="AcceptDialog/VBoxContainer"]
visible = false
margin_right = 303.0
margin_bottom = 22.0
custom_colors/font_color = Color( 0.301961, 0.301961, 0.368627, 1 )
text = "Name"
align = 1
autowrap = true

[node name="rolle" type="Label" parent="AcceptDialog/VBoxContainer"]
margin_top = 26.0
margin_right = 303.0
margin_bottom = 48.0
size_flags_horizontal = 9
size_flags_vertical = 8
custom_colors/font_color = Color( 0.501961, 0.501961, 0.501961, 1 )
text = "Rolle"
align = 1
valign = 2
autowrap = true

[node name="TextureRect" type="TextureRect" parent="AcceptDialog/VBoxContainer"]
margin_top = 52.0
margin_right = 303.0
margin_bottom = 434.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 4 )
expand = true

[node name="quote" type="Label" parent="AcceptDialog/VBoxContainer"]
margin_top = 438.0
margin_right = 303.0
margin_bottom = 455.0
size_flags_horizontal = 9
size_flags_vertical = 8
custom_fonts/font = SubResource( 1 )
text = "Quote und/oder Lebensweisheit."
align = 1
autowrap = true

[connection signal="pressed" from="Menue" to="." method="_on_Menue_pressed"]
